# FS24-Semester-Project

./: README.md
dsmc-code/: .gitignore  AllManager.h  CMakeLists.txt  DSMCHelpers.h  FieldContainer.hpp  FieldSolver.hpp  Nanbu.cpp  NanbuManager.h  ParticleContainer.hpp  README.md  run.sh
final-project-presentation/: beamercolorthemePSI.sty  beamerfontthemePSI.sty  beamerinnerthemePSI.sty  beamerouterthemePSI.sty  beamerthemePSI.sty  inhalt.tex  literature.bib  praes-tmpl.tex
plot-reproducability/: 2024.07.22 - Test 1 Data Visualization.ipynb  2024.07.25 - Test 2 (Delta) Data Visualization.ipynb  2024.07.26 - Test 3 (Cold Sphere Heating).ipynb  README.md
plot-reproducability/data/convergence/: 1_Nanbu_convergence_parallel20000.csv  1_TakAbe_convergence_parallel20000.csv  2_0.3Nanbu_convergence_parallel3200.csv  2_0.3TakAbe_convergence_parallel3200.csv  2_0.5Nanbu_convergence_parallel3200.csv  2_0.5TakAbe_convergence_parallel3200.csv  3_Nanbu_convergence_parallel1600.csv  3_Nanbu_convergence_parallel3200.csv  3_Nanbu_convergence_parallel400.csv  3_Nanbu_convergence_parallel6400.csv  3_Nanbu_convergence_parallel800.csv  3_TakAbe_convergence_parallel1600.csv  3_TakAbe_convergence_parallel3200.csv  3_TakAbe_convergence_parallel400.csv  3_TakAbe_convergence_parallel6400.csv  3_TakAbe_convergence_parallel800.csv
plot-reproducability/data/delta/: 1722029000667_TakAbe_delta.csv  1722029017463_TakAbe_delta.csv  1722029921496_TakAbe_delta.csv  1722029951122_TakAbe_delta.csv  logs17,00,79.txt  (+17 more)
project-report/latex/: appendix.tex  content.tex  literature.bib  main.tex
(+11 files in other folders)
